refactor: add feed directly to email

--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.2",
+    "inline-css": "^2.4.2",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-api-cache": "^1.1.0",
     "react-dom": "^16.9.0",
     "react-inky": "^0.4.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
