--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-api-cache": "^1.1.0",
     "react-dom": "^16.9.0",
     "react-inky": "^0.4.0",
+    "react-quill": "^1.3.3",
     "react-scripts": "3.1.1",
     "styled-components": "^4.4.0"
   },
