--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.5.1",
+    "immutability-helper": "^3.0.1",
     "inline-css": "^2.4.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-api-cache": "^1.1.0",
+    "react-dnd": "^9.4.0",
+    "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.9.0",
     "react-inky": "^0.4.0",
     "react-quill": "^1.3.3",
