--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react-dom": "^16.9.0",
     "react-inky": "^0.4.0",
     "react-quill": "^1.3.3",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
-    "styled-components": "^4.4.0"
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
