--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-quill": "^1.3.3",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
