--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "siphon-media-query": "^1.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -56,6 +56,8 @@
     ]
   },
   "devDependencies": {
-    "@researchgate/babel-plugin-transform-scss-import-to-string": "^0.1.3"
+    "@researchgate/babel-plugin-transform-scss-import-to-string": "^0.1.3",
+    "customize-cra": "^0.8.0",
+    "react-app-rewired": "^2.1.4"
   }
 }
