--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.5.1",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
     "babel-core": "^6.26.3",
     "foundation-emails": "^2.2.1",
     "inline-css": "^2.4.2",
@@ -24,7 +26,8 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "siphon-media-query": "^1.0.0"
+    "siphon-media-query": "^1.0.0",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -57,7 +60,10 @@
   },
   "devDependencies": {
     "@researchgate/babel-plugin-transform-scss-import-to-string": "^0.1.3",
+    "@types/react-redux": "^7.1.5",
     "customize-cra": "^0.8.0",
-    "react-app-rewired": "^2.1.4"
+    "react-app-rewired": "^2.1.4",
+    "tslint": "^5.20.1",
+    "tslint-react": "^4.1.0"
   }
 }
