--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tslint -c tslint.json 'src/**/*.ts*'"
   },
   "eslintConfig": {
     "extends": "react-app"
