--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.5.1",
+    "@types/lodash": "^4.14.144",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "babel-core": "^6.26.3",
