--- a/package.json
+++ b/package.json
@@ -58,6 +58,12 @@
   "devDependencies": {
     "@researchgate/babel-plugin-transform-scss-import-to-string": "^0.1.3",
     "customize-cra": "^0.8.0",
-    "react-app-rewired": "^2.1.4"
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "flow-bin": "^0.112.0",
+    "react-app-rewired": "^2.1.4",
+    "react-dnd-cjs": "^9.4.0",
+    "react-dnd-test-backend": "^9.4.0",
+    "react-dnd-test-utils": "^9.4.0"
   }
 }
