--- a/.flowconfig
+++ b/.flowconfig
@@ -8,5 +8,10 @@
 all=warn
 
 [options]
+module.file_ext=.js
+module.file_ext=.jsx
+module.file_ext=.json
+module.file_ext=.css
+module.file_ext=.scss
 
 [strict]
