--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@researchgate/babel-plugin-transform-scss-import-to-string": "^0.1.3",
+    "css-modules-flow-types-loader": "^1.3.0",
     "customize-cra": "^0.8.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
