--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.7.2",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.5.1",
-    "babel-core": "^6.26.3",
+    "@researchgate/babel-plugin-transform-scss-import-to-string": "^0.1.3",
     "foundation-emails": "^2.2.1",
     "inline-css": "^2.4.2",
     "juice": "^5.2.0",
@@ -56,7 +57,9 @@
     ]
   },
   "devDependencies": {
-    "@researchgate/babel-plugin-transform-scss-import-to-string": "^0.1.3",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "babel-jest": "^24.9.0",
     "css-modules-flow-types-loader": "^1.3.0",
     "customize-cra": "^0.8.0",
     "enzyme": "^3.10.0",
@@ -65,6 +68,16 @@
     "react-app-rewired": "^2.1.4",
     "react-dnd-cjs": "^9.4.0",
     "react-dnd-test-backend": "^9.4.0",
-    "react-dnd-test-utils": "^9.4.0"
+    "react-dnd-test-utils": "^9.4.0",
+    "react-test-renderer": "^16.12.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^dnd-core$": "dnd-core/dist/cjs",
+      "^react-dnd$": "react-dnd/dist/cjs",
+      "^react-dnd-html5-backend$": "react-dnd-html5-backend/dist/cjs",
+      "^react-dnd-test-backend$": "react-dnd-test-backend/dist/cjs",
+      "^react-dnd-test-utils$": "react-dnd-test-utils/dist/cjs"
+    }
   }
 }
