--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "flow-bin": "^0.112.0",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
     "react-app-rewired": "^2.1.4",
     "react-dnd-cjs": "^9.4.0",
     "react-dnd-test-backend": "^9.4.0",
@@ -72,6 +74,8 @@
     "react-test-renderer": "^16.12.0"
   },
   "jest": {
+    "setupFilesAfterEnv": ["jest-enzyme"],
+    "testEnvironment": "enzyme",
     "moduleNameMapper": {
       "^dnd-core$": "dnd-core/dist/cjs",
       "^react-dnd$": "react-dnd/dist/cjs",
