--- a/package.json
+++ b/package.json
@@ -61,6 +61,11 @@
       "last 1 safari version"
     ]
   },
+  "prettier": {
+    "printWidth": 90,
+    "bracketSpacing": false,
+    "trailingComma": "es5"
+  },  
   "devDependencies": {
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
