--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ocinema-react-emailbuilder",
   "version": "0.1.0",
+  "license": "ISC",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.7.2",
@@ -8,6 +9,7 @@
     "@material-ui/icons": "^4.5.1",
     "@researchgate/babel-plugin-transform-scss-import-to-string": "^0.1.3",
     "foundation-emails": "^2.2.1",
+    "immer": "^5.0.0",
     "inline-css": "^2.4.2",
     "juice": "^5.2.0",
     "lodash": "^4.17.15",
@@ -65,7 +67,7 @@
     "printWidth": 90,
     "bracketSpacing": false,
     "trailingComma": "es5"
-  },  
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
