--- a/package.json
+++ b/package.json
@@ -71,9 +71,12 @@
   "devDependencies": {
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "@testing-library/dom": "^6.10.1",
+    "@testing-library/react": "^9.3.2",
     "babel-jest": "^24.9.0",
     "css-modules-flow-types-loader": "^1.3.0",
     "customize-cra": "^0.8.0",
+    "cypress": "^3.6.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.6.0",
