--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lint": "eslint .",
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
     "test": "react-app-rewired test --env=jsdom",
+    "cypress:open": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -67,6 +68,7 @@
     "babel-jest": "^24.9.0",
     "css-modules-flow-types-loader": "^1.3.0",
     "customize-cra": "^0.8.0",
+    "cypress": "^3.7.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.6.0",
